--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,40 @@
 asgiref==3.5.0
+asttokens==2.0.5
+backcall==0.2.0
 backports.zoneinfo==0.2.1
-Django==4.0.3
+decorator==5.1.1
+Django==4.0.4
 django-cors-headers==3.11.0
+django-extensions==3.1.5
 django-filter==21.1
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.1.0
+executing==0.8.3
+fake-factory==9999.9.9
+Faker==13.11.0
 importlib-metadata==4.11.3
+ipython==8.2.0
+jedi==0.18.1
 Markdown==3.3.6
+matplotlib-inline==0.1.3
+netaddr==0.8.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.0
+prompt-toolkit==3.0.29
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.11.2
+PyJWT==2.3.0
+pyllist==0.3
+python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
+six==1.16.0
 sqlparse==0.4.2
+stack-data==0.2.0
+traitlets==5.1.1
+uWSGI==2.0.20
+wcwidth==0.2.5
 zipp==3.8.0
