--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ decorator==5.1.1
 Deprecated==1.2.13
 Django==4.0.4
 django-cors-headers==3.11.0
+django-dbbackup==4.0.1
 django-debug-toolbar==3.5.0
 django-extensions==3.1.5
 django-filter==21.1
