Clear scoreboard cache after Rate

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 # Socket and pid file location/permission.
-socket = localhost:8001 # localhost only, let nginx deal with the outside
-; http = 0.0.0.0:8001
+; socket = localhost:8001 # localhost only, let nginx deal with the outside
+http = 0.0.0.0:8000
 pidfile = /tmp/bkdnoj-site.pid
 chmod-pidfile = 666
 
@@ -15,6 +15,8 @@ plugins = python
 env = DJANGO_SETTINGS_MODULE=bkdnoj.settings
 module = bkdnoj.wsgi:application
 optimize = 2
+
+; static-map = /media=/home/ubuntu/backend/media
 
 # Scaling settings. Tune as you like.
 memory-report = true
