--- a/.env.copy
+++ b/.env.copy
@@ -3,3 +3,12 @@ POSTGRES_USER=<db_user>
 POSTGRES_PASSWORD=<db_user_pass>
 POSTGRES_HOST=<db_host>
 POSTGRES_PORT=<db_port>
+
+SECRET_KEY=<should_be_a_random_string>
+DEBUG=False 
+
+
+
+
+
+DJANGO_SETTINGS_MODULE=bkdnoj.settings
