--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ jsonfield==3.1.0
 kombu==5.2.4
 Markdown==3.3.6
 matplotlib-inline==0.1.3
+natsort==8.1.0
 netaddr==0.8.0
 packaging==21.3
 parso==0.8.3
