--- a/.env.copy
+++ b/.env.copy
@@ -4,11 +4,14 @@ POSTGRES_PASSWORD=<db_user_pass>
 POSTGRES_HOST=<db_host>
 POSTGRES_PORT=<db_port>
 
-SECRET_KEY=<should_be_a_random_string>
-DEBUG=False 
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
+DJANGO_SECRET_KEY=<should_be_a_random_string>
+DJANGO_DEBUG=False 
+DJANGO_ALLOWED_HOST=example.com
 
-
-
+BKDNOJ_JUDGE_ADDRESS=localhost
+BKDNOJ_JUDGE_PORT=9999
 
 DJANGO_SETTINGS_MODULE=bkdnoj.settings
