[REFACTOR] Test running image

--- a/etc/bkndojv2.env.sample
+++ b/etc/bkndojv2.env.sample
@@ -7,9 +7,9 @@ POSTGRES_PORT=5432
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-DJANGO_SECRET_KEY=oajweoprja6TGHjkotrfghji&^TrghjkyHJK09876ytgfn
+DJANGO_SECRET_KEY=<should_be_a_random_string>
 DJANGO_DEBUG=True
-DJANGO_ALLOWED_HOST=1509.ddns.net
+DJANGO_ALLOWED_HOST=localhost
 
 BKDNOJ_JUDGE_ADDRESS=localhost
 BKDNOJ_JUDGE_PORT=9999
