--- a/docker/migrate/Dockerfile
+++ b/docker/migrate/Dockerfile
@@ -11,5 +11,4 @@ RUN apk add --update \
 RUN apk add git libseccomp libseccomp-dev libffi-dev
 RUN pip install -r requirements.txt
 
-EXPOSE 8000
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+RUN python manage.py migrate
