--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ tomlkit==0.11.6
 traitlets==5.1.1
 Twisted==22.8.0
 txaio==22.2.1
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 urllib3==1.26.9
 uWSGI==2.0.20
 vine==5.0.0
