[FIX] Fix merged MR for tasks/24 (#34)
* Fix typo missing a s

* Only install linter and linter plugins

* Remove activate venv from script

* Minor name changes

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: Linting
+name: Lint
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pylint==2.15.9 pylint-django==2.5.3 pylint-plugin-utils==0.7 
 
-      - name: Run lint script
+      - name: Linting
         run: bash ./scripts/lint.sh
