--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - main-2.0 # temporary main branch before swapping
       - releases/*
+      - tasks/*
   workflow_dispatch:
     branches:
       - tasks/*
@@ -17,9 +18,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker
-        uses: docker/setup-docker@v1
-
       - name: Determine branch name
         id: branch
         run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
@@ -27,16 +25,16 @@ jobs:
       - name: Build and push Docker image
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           BRANCH_NAME: ${{ env.BRANCH_NAME }}
         run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+          echo $DOCKER_ACCESS_TOKEN | docker login -u $DOCKER_USERNAME --password-stdin
           if [[ "${BRANCH_NAME}" == "releases/"* ]]; then
             IMAGE_TAG="${BRANCH_NAME}"
           elif [[ "${BRANCH_NAME}" == "main-2.0" ]]; then
             IMAGE_TAG="latest"
           elif [[ "${BRANCH_NAME}" == "tasks/"* ]]; then
-            IMAGE_TAG="tasks-$(echo ${BRANCH_NAME} | cut -d/ -f2)_m-$(echo ${{ github.sha }} | cut -c1-7)"
+            IMAGE_TAG="t-$(echo ${BRANCH_NAME} | cut -d/ -f2)_m-$(echo ${{ github.sha }} | cut -c1-7)"
           else
             echo "Branch name not supported."
             exit 1
